# rp_backend_to_deploy

./: .env.example  .gitignore  Downloads - Shortcut.lnk  README.md  essay_req.txt  main.py  pyproject.toml  requirements.txt  shortnote_req.txt  story_req.txt
.github/workflows/: master_esethroughai.yml
v1/Controllers/: EssayController.py  MCQController.py  ShortNoteContoller.py  StoryController.py
v1/Models/: EssayModel.py  MCQModel.py  ShortNoteModel.py
v1/Routes/: EssayRouter.py  MCQRouter.py  ShortNoteRouter.py  StoryRouter.py
v1/Services/Essay/: AEG.py  AEG_v2.py
v1/Services/Essay/AEG_Files/: scaling_parameters.npy
v1/Services/Essay/AEG_Files/AEG_Turanga 8-11 Files/AEG Model_Weights - 8-11/: model_topic_1.h5  model_topic_2.h5  (+6 more)
v1/Services/MCQs/: Code to push large file.txt  DistractorGeneration_Using_ConceptNet.py  DistractorGeneration_Using_Sense2vec.py  DistractorGeneration_Using_Wordnet.py  DistractorsGeneration.py  FilterBestKeywords.py  KeywordExtraction.py  QuestionGeneration.py  Sample context.txt  Summarizer.py  code to split input of audio.txt  extraCodes.py  frontendcode.txt  getNounsMultipartite.py  sample context 2.txt
v1/Services/MCQs/TrainedModel/model/: config.json
v1/Services/MCQs/TrainedModel/tokenizer/: tokenizer_config.json
v1/Services/MCQs/test/: test 1.txt  test 2.txt  test 3.txt
v1/Services/ShortNote/: ShortNote.py
v1/Services/Story/: Story.py
v1/Services/Story/Video_Creation/: services.py  video_creator.py
v1/Services/Story/Video_Creation/audios/: audio_info.py
v1/Services/Story/Video_Creation/images/: image_info.py
